feat(global): update project